# asset-manager

./: .coveragerc  .env.cicd  .gitignore  README.md  asset_manager.db  pyproject.toml  setup.sh
.github/workflows/: ci-cd.yml
asset_manager/: main.py  scripts.py  seed.py  start.py
asset_manager/core/: auth.py  authz_utils.py  logger.py  middleware.py  security.py
asset_manager/db/: base.py  session.py
asset_manager/db/models/: __init__.py  asset.py  assignment.py  label.py  label_mapping.py  linked_asset.py  request.py  role.py  user.py
asset_manager/repositories/: abstract_crud_repo.py  asset_repo.py  assignment_repo.py  label_mapping_repo.py  label_repo.py  linked_asset_repo.py  request_repo.py  role_repo.py  user_repo.py
asset_manager/routes/: assets.py  assignments.py  auth.py  labels.py  maintenance.py  requests.py  role.py  user.py
asset_manager/schemas/: asset.py  assignments.py  auth.py  cast.py  labels.py  maintenance.py  request.py  role.py  user.py
tests/core/: test_authz_utils.py  test_security.py
tests/data/: auth.py  db_monitor.py  model_creators.py  models.py  reload.py  repositories.py  seed.py
tests/repositories/: test_abstract_crud_repo.py  test_asset_repo.py  test_assignment_repo.py  test_label_mapping_repo.py  test_label_repo.py  test_linked_asset_repo.py  test_request_repo.py  test_role_repo.py  test_user_repo.py
tests/routes/: test_assets.py  test_assignments.py  test_auth.py  test_labels.py  test_maintenance.py  test_requests.py  test_role.py  test_user.py
