[project]
name = "asset-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "TheUltimateChickenLord",email = "Alexander.B_2023_Lon@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "conventional-commit (>=0.4.2,<0.5.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "asset_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
