[project]
name = "asset-manager"
version = "0.3.0"
description = ""
authors = [
    {name = "TheUltimateChickenLord"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
packages = [{include = "asset_manager"}]

[tool.poetry.scripts]
start = "asset_manager.start:start"
seed = "asset_manager.seed:seed"
lint = "asset_manager.scripts:lint"
test = "asset_manager.scripts:test"

[tool.poetry.group.dev.dependencies]
conventional-commit = ">=0.4.2,<0.5.0"
faker = "^37.1.0"
pylint = "^3.3.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
